[workspace]
resolver = "2"

members = [
	"appchain",
	"ibc",
	"lpos",
	"support",
	"upward-messages",
]


[patch.crates-io]

# for tendermint
tendermint              = { git = "https://github.com/informalsystems/tendermint-rs", rev = "4f6ef3d6" }
tendermint-rpc          = { git = "https://github.com/informalsystems/tendermint-rs", rev = "4f6ef3d6" }
tendermint-proto        = { git = "https://github.com/informalsystems/tendermint-rs", rev = "4f6ef3d6" }
tendermint-light-client = { git = "https://github.com/informalsystems/tendermint-rs", rev = "4f6ef3d6" }
tendermint-testgen      = { git = "https://github.com/informalsystems/tendermint-rs", rev = "4f6ef3d6" }
ics23                   = { git = "https://github.com/informalsystems/ics23.git", rev = "4461b673" }
safe-regex          = { git = "https://github.com/informalsystems/safe-regex.git", rev = "842d31f5" }
safe-regex-macro    = { git = "https://github.com/informalsystems/safe-regex.git", rev = "842d31f5" }
safe-regex-compiler = { git = "https://github.com/informalsystems/safe-regex.git", rev = "842d31f5" }
safe-quote          = { git = "https://github.com/informalsystems/safe-regex.git", rev = "842d31f5" }
safe-proc-macro2    = { git = "https://github.com/informalsystems/safe-regex.git", rev = "842d31f5" }
tonic = { package = "informalsystems-tonic", git = "https://github.com/informalsystems/tonic.git", rev = "99edfe23" }
