[package]
name = "pallet-octopus-appchain"
version = "4.0.0-pre.0"
edition = "2021"
authors = ["Octopus Network <hi@oct.network>"]
license = "Apache-2.0"
homepage = "https://oct.network"
repository = "https://github.com/octopus-network/octopus-pallets.git"
description = "FRAME pallet for joining the octopus network as an appchain."
readme = "README.md"
documentation = "https://docs.rs/pallet-octopus-appchain"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = { version = "0.4.17", default-features = false }
serde = { version = "1.0.136", features = ["derive"], default-features = false }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }

pallet-octopus-support = { path = "../support", default-features = false }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

pallet-assets = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", features = ["historical"] }
pallet-uniques = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

pallet-octopus-lpos = { path = "../lpos" }
pallet-octopus-upward-messages = { path = "../upward-messages" }
pallet-octopus-bridge = {path = "../bridge" }

[features]
default = ["std"]
std = [
	"base64/std",
	"codec/std",
	"hex/std",
	"log/std",
	"scale-info/std",
	"serde/std",
	"serde_bytes/std",
	"serde_json/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-octopus-support/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
