[package]
name = "pallet-octopus-appchain"
description = "FRAME pallet for joining the octopus network as an appchain."
readme = "README.md"
build = "build.rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
base64 = { workspace = true, default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
hex = { workspace = true, default-features = false, features = ["alloc"] }
log = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"], default-features = false }
serde_bytes = { workspace = true, default-features = false, features = ["alloc"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

pallet-octopus-support = { path = "../support", default-features = false }

[dev-dependencies]
sp-keyring.workspace = true
sp-keystore.workspace = true
sp-staking.workspace = true

pallet-assets.workspace = true
pallet-balances.workspace = true
pallet-timestamp.workspace = true
pallet-session = { workspace = true, features = ["historical"] }
pallet-uniques.workspace = true

pallet-octopus-lpos = { path = "../lpos" }
pallet-octopus-upward-messages = { path = "../upward-messages" }
pallet-octopus-bridge = { path = "../bridge" }

[features]
default = ["std"]
std = [
	"base64/std",
	"codec/std",
	"hex/std",
	"log/std",
	"scale-info/std",
	"serde/std",
	"serde_bytes/std",
	"serde_json/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-octopus-support/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
