[package]
name = "pallet-octopus-bridge"
description = "FRAME pallet bridge"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
borsh = { workspace = true, default-features = false }
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
hex = { workspace = true, default-features = false, features = ["alloc"] }
log = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"], default-features = false }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

pallet-octopus-support = { path = "../support", default-features = false }

# Optional imports for benchmarking
frame-benchmarking = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
sp-keyring.workspace = true
sp-keystore.workspace = true
sp-staking.workspace = true
sp-core.workspace = true
sp-io.workspace = true

pallet-assets.workspace = true
pallet-balances.workspace = true
pallet-timestamp.workspace = true
pallet-session = { workspace = true, features = ["historical"] }
pallet-uniques.workspace = true

pallet-octopus-lpos = { path = "../lpos" }
pallet-octopus-appchain = { path = "../appchain" }
pallet-octopus-upward-messages = { path = "../upward-messages" }

[features]
default = ["std"]
std = [
	"borsh/std",
	"codec/std",
	"hex/std",
	"log/std",
	"serde/std",
	"serde_json/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-octopus-support/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
