[package]
name = "pallet-octopus-downlink"
version = "3.0.0-pre.0"
edition = "2018"
authors = ["Octopus Network <hi@oct.network>"]
license = "Apache-2.0"
homepage = "https://oct.network"
repository = "https://github.com/octopus-network/octopus-pallets.git"
description = "FRAME pallet used to send messages from appchain to mainchain."
readme = "README.md"
documentation = "https://docs.rs/pallet-octopus-appchain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.0", default-features = false }
sp-io = { default-features = false, version = "3.0.0" }
sp-std = { default-features = false, version = "3.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"sp-io/std",
	"sp-std/std",
]