[package]
name = "pallet-octopus-lpos"
authors = ["Parity Technologies <admin@parity.io>", "Octopus Network <hi@oct.network>"]
description = "FRAME pallet LPoS"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
borsh = { workspace = true, default-features = false }
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
hex = { workspace = true, default-features = false, features = ["alloc"] }
log = { workspace = true, default-features = false }

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false,  features = ["historical"] }

pallet-octopus-support = { path = "../support", default-features = false }

# Optional imports for benchmarking
frame-benchmarking = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
sp-keyring.workspace = true
sp-core.workspace = true

pallet-assets.workspace = true
pallet-balances.workspace = true
pallet-timestamp.workspace = true
pallet-uniques.workspace = true

pallet-octopus-appchain = { path = "../appchain" }
pallet-octopus-upward-messages = { path = "../upward-messages" }
pallet-octopus-bridge = {path = "../bridge"}

[features]
default = ["std"]
std = [
	"borsh/std",
	"codec/std",
	"hex/std",
	"log/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"pallet-octopus-support/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
