[package]
name = "pallet-octopus-support"
version = "4.0.0-pre.0"
edition = "2021"
authors = ["Octopus Network <hi@oct.network>"]
license = "Apache-2.0"
homepage = "https://oct.network"
repository = "https://github.com/octopus-network/octopus-pallets.git"
description = "Support code for octopus pallets."
readme = "README.md"
documentation = "https://docs.rs/pallet-octopus-support"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
borsh = { version = "0.9.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/octopus-network/substrate.git", branch = "polkadot-v0.9.28-chainbridge", default-features = false }
sp-runtime = { git = "https://github.com/octopus-network/substrate.git", branch = "polkadot-v0.9.28-chainbridge", default-features = false }
sp-std = { git = "https://github.com/octopus-network/substrate.git", branch = "polkadot-v0.9.28-chainbridge", default-features = false }

[features]
default = ["std"]
std = [
	"borsh/std",
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
]
