[package]
name = "pallet-octopus-support"
description = "Support code for octopus pallets."
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
borsh = { workspace = true, default-features = false }
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

frame-support = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"borsh/std",
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
]
