[package]
name = "pallet-octopus-upward-messages"
version = "4.0.0-pre.0"
edition = "2018"
authors = ["Octopus Network <hi@oct.network>"]
license = "Apache-2.0"
homepage = "https://oct.network"
repository = "https://github.com/octopus-network/octopus-pallets.git"
description = "FRAME pallet used to send messages from appchain to mainchain."
readme = "README.md"
documentation = "https://docs.rs/pallet-octopus-upward-messages"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }

pallet-octopus-support = { path = "../support", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-octopus-support/std",
]
